--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/plus-jakarta-sans": "^5.0.18",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
     "next": "^13.4.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
