--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fontsource/plus-jakarta-sans": "^5.0.18",
+    "aos": "^2.3.4",
     "clsx": "^1.2.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
@@ -21,7 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-slick": "^0.29.0",
     "sharp": "^0.32.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
