--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   },
   "dependencies": {
     "@fontsource/plus-jakarta-sans": "^5.0.18",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "aos": "^2.3.4",
+    "babel-plugin-macros": "^3.1.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
@@ -31,6 +38,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/aos": "^3.0.7",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "autoprefixer": "^10.4.14",
